@@ -96,10 +96,7 @@ tile_manager_unref (TileManager *tm)
           gint i;
 
           for (i = 0; i < ntiles; i++)
-            {
-              TILE_MUTEX_LOCK (tm->tiles[i]);
-              tile_detach (tm->tiles[i], tm, i);
-            }
+            tile_detach (tm->tiles[i], tm, i);
 
           g_free (tm->tiles);
         }
@@ -198,8 +195,6 @@ tile_manager_get (TileManager *tm,
 
   if (wantread)
     {
-      TILE_MUTEX_LOCK (*tile_ptr);
-
       if (wantwrite)
         {
           if ((*tile_ptr)->share_count > 1)
@@ -234,8 +229,6 @@ tile_manager_get (TileManager *tm,
 
               tile_detach (*tile_ptr, tm, tile_num);
 
-              TILE_MUTEX_LOCK (new);
-
               tile_attach (new, tm, tile_num);
               *tile_ptr = new;
             }
@@ -251,8 +244,6 @@ tile_manager_get (TileManager *tm,
                         (*tile_ptr)->write_count);
         }
 #endif
-
-      TILE_MUTEX_UNLOCK (*tile_ptr);
 
       tile_lock (*tile_ptr);
     }
@@ -350,10 +341,8 @@ tile_invalidate (Tile        **tile_ptr,
   g_return_if_fail (tile_ptr != NULL);
   g_return_if_fail (tm != NULL);
 
-  TILE_MUTEX_LOCK (tile);
-
   if (! tile->valid)
-    goto leave;
+    return;
 
   if (G_UNLIKELY (tile->share_count > 1))
     {
@@ -369,8 +358,6 @@ tile_invalidate (Tile        **tile_ptr,
       new->size    = tile->size;
 
       tile_detach (tile, tm, tile_num);
-
-      TILE_MUTEX_LOCK (new);
 
       tile_attach (new, tm, tile_num);
       tile = *tile_ptr = new;
@@ -394,9 +381,6 @@ tile_invalidate (Tile        **tile_ptr,
        */
       tile_swap_delete (tile);
     }
-
-leave:
-  TILE_MUTEX_UNLOCK (tile);
 }
 
 void
@@ -492,8 +476,6 @@ tile_manager_map (TileManager *tm,
   if (G_UNLIKELY (! srctile->valid))
     g_warning("%s: srctile not validated yet!  please report", G_GNUC_FUNCTION);
 
-  TILE_MUTEX_LOCK (*tile_ptr);
-
   if (G_UNLIKELY ((*tile_ptr)->ewidth  != srctile->ewidth  ||
                   (*tile_ptr)->eheight != srctile->eheight ||
                   (*tile_ptr)->bpp     != srctile->bpp))
@@ -508,16 +490,12 @@ tile_manager_map (TileManager *tm,
   g_printerr (">");
 #endif
 
-  TILE_MUTEX_LOCK (srctile);
-
 #ifdef DEBUG_TILE_MANAGER
   g_printerr (" [src:%p tm:%p tn:%d] ", srctile, tm, tile_num);
 #endif
 
   tile_attach (srctile, tm, tile_num);
   *tile_ptr = srctile;
-
-  TILE_MUTEX_UNLOCK (srctile);
 
 #ifdef DEBUG_TILE_MANAGER
   g_printerr ("}\n");
